examples/k8stest/conf/ref-grant-status/ReferenceGrant_backend_allow-app.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-app
  namespace: edgion-backend
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: edgion-default
  to:
    - group: ""
      kind: Service
