examples/k8stest/conf/ref-grant-status/Service_backend_cross-ns-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cross-ns-svc
  namespace: edgion-backend
spec:
  selector:
    app: edgion-test-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30001
