examples/k8stest/conf/ref-grant-status/HTTPRoute_app_cross-ns-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cross-ns-route
  namespace: edgion-default
spec:
  parentRefs:
    - name: public-gateway
      namespace: edgion-test
  hostnames:
    - cross-ns.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cross-ns-svc
          namespace: edgion-backend
          port: 80
