examples/k8stest/conf/ref-grant-status/HTTPRoute_app_multi-parent.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-parent
  namespace: app
spec:
  parentRefs:
    - name: public-gateway
      namespace: edgion-test
    - name: internal-gateway
      namespace: edgion-test
  hostnames:
    - multi-parent.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cross-ns-svc
          namespace: edgion-backend
          port: 80
